Test handlers with new base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <title>Nebulous Adventure</title>
+    <link rel="stylesheet" href="/css/base.css" type="text/css" media="all" />
+</head>
 <body>
+    <h1>Nebulous, dude.</h1>
 
-<img border="0" src="http://apod.nasa.gov/apod/image/0512/m31_gendler_Nmosaic1.jpg" alt="Nebulous!!!">
-
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="/js/app.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
