--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,28 @@
     <link rel="stylesheet" href="/css/base.css" type="text/css" media="all" />
 </head>
 <body>
-    <h1>Nebulous, dude.</h1>
+<div class="container">
+    <div class="console">
+        <p>
+            There is a fifth dimension beyond that which is known to man.
+        </p>
+        <p>
+            It is a dimension as vast as space and as timeless as infinity.
+        </p>
+        <p>
+            It is the middle ground between light and shadow, between science and superstition, and it lies between the pit of man's fears and the summit of his knowledge.
+        </p>
+        <p>
+            This is the dimension of imagination. It is a journey which we call "<span class="orange">The Nebulous Adventure</span>".
+        </p>
+    </div>
+    <div class="prompt">
+        <label for="prompt">&gt;</label>
+        <input type="text" name="c" id="prompt" value="" />
+    </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src="/js/app.js" type="text/javascript" charset="utf-8"></script>
+</div>
 </body>
 </html>
