--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,11 @@
         </p>
     </div>
     <div class="prompt">
-        <label for="prompt">&gt;</label>
-        <input type="text" name="c" id="prompt" value="" />
+        <form action="GET">
+            <label for="prompt">&gt;</label>
+            <input type="text" name="c" id="prompt" value="" />
+            <a href="#">?</a>
+        </form>
     </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
