--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Nebulous Adventure</title>
     <link rel="stylesheet" href="/css/base.css" type="text/css" media="all" />
+    <link rel="icon" href="/img/favicon.ico" />
 </head>
 <body>
 <div class="container">
