--- a/css/base.css
+++ b/css/base.css
@@ -38,6 +38,7 @@ body {
     font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
     margin-bottom: 12px;
     font-size: 14px;
+    white-space: pre-wrap;
 }
 
 .orange {
